--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "googleapis": "^118.0.0",
-    "formidable": "^2.1.1"
+    "formidable": "^2.1.1",
+    "@supabase/supabase-js": "^2.43.1"
   }
 }
