--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "ani-album",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+  "private": true,
   "dependencies": {
-    "next": "^14.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "googleapis": "^118.0.0",
-    "formidable": "^2.1.1",
-    "@supabase/supabase-js": "^2.43.1"
+    "@supabase/supabase-js": "^2.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   }
 }
